# Renderer

./: CMakeLists.txt  run.sh
core/: api.h  common.h  macro.h
core/camera/: camera.h
core/darray/: darray.h
core/draw2d/: draw2d.c  draw2d.h
core/graphics/: graphics.c  graphics.h
core/image/: image.c  image.h
core/maths/: maths.c  maths.h
core/mesh/: mesh.c  mesh.h
core/model/: model.h
core/texture/: texture.c  texture.h
core/utils/: utils.c  utils.h
core/win32/: win32.c  win32.h
shader/: shader.h
shader/flat/: flat_shader.c  flat_shader.h
shader/gouraud/: gouraud_shader.c  gouraud_shader.h
test/: test_byte.c  test_darray.c  test_flat.c  test_gouraud.c  test_line.c  test_math.c  test_mesh.c  test_mvp.c  test_point.c  test_triangle.c  test_windows.c
